--- a/eda/income_consumption/income_consumption.ipynb
+++ b/eda/income_consumption/income_consumption.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "0ae958ca",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "09be6c1d",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "e6ac0648",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "2491812f",
    "metadata": {},
    "outputs": [
@@ -289,7 +289,7 @@
        "max   15707640000 2427277258000 949127229000 91489558000  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "29422f48",
    "metadata": {},
    "outputs": [],
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "2f8264d5",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
        "4  1369768000  7665137000  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,11 +475,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "97b69795",
    "metadata": {},
    "outputs": [],
    "source": [
+    "df.sort_values('기준_년분기_코드', inplace=True)\n",
     "df.to_csv('income_consumption_data.csv')"
    ]
   }
