rename: 폴더 구조 수정

--- a/eda/code/commerical_change.ipynb
+++ b/eda/code/commerical_change.ipynb
@@ -412,20 +412,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "19c51006",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 데이터 저장\n",
     "df.sort_values('기준_년분기_코드', inplace=True)\n",
-    "df.to_csv('commercial_change_data.csv')"
+    "df.to_csv('./../data/commercial_change_data.csv')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml_env",
+   "display_name": "pystudy_env",
    "language": "python",
    "name": "python3"
   },
