--- a/eda/code/income_consumption.ipynb
+++ b/eda/code/income_consumption.ipynb
@@ -490,13 +490,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "97b69795",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.sort_values('기준_년분기_코드', inplace=True)\n",
-    "df.to_csv('income_consumption_data.csv')"
+    "df.to_csv('./../data/income_consumption_data.csv')"
    ]
   },
   {
