--- a/eda/code/rent.ipynb
+++ b/eda/code/rent.ipynb
@@ -297,12 +297,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "780d1df4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.sort_values('기준_년분기_코드').to_csv('rent_data.csv', index=False)"
+    "df.sort_values('기준_년분기_코드').to_csv('./../data/rent_data.csv', index=False)"
    ]
   },
   {
