--- a/eda/code/stores.ipynb
+++ b/eda/code/stores.ipynb
@@ -581,14 +581,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "id": "9fe303a5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# # 데이터 저장\n",
     "df.sort_values('기준_년분기_코드', inplace=True)\n",
-    "df.to_csv('stores_data.csv')"
+    "df.to_csv('./../data/stores_data.csv')"
    ]
   }
  ],
