--- a/eda/code/working_population.ipynb
+++ b/eda/code/working_population.ipynb
@@ -879,13 +879,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "635a0852",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.sort_values('기준_년분기_코드', inplace=True)\n",
-    "df.to_csv('working_population_data.csv')"
+    "df.to_csv('./../data/working_population_data.csv')"
    ]
   },
   {
