--- a/eda/code/resident_population.ipynb
+++ b/eda/code/resident_population.ipynb
@@ -903,20 +903,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "6109035c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 불필요한 컬럼 제거한 데이터 저장\n",
     "df.sort_values('기준_년분기_코드', inplace=True)\n",
-    "df.to_csv(\"resident_population.csv\", index=False, encoding=\"utf-8-sig\")"
+    "df.to_csv(\"./../data/resident_population.csv\", index=False, encoding=\"utf-8-sig\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml_env",
+   "display_name": "pystudy_env",
    "language": "python",
    "name": "python3"
   },
