--- a/eda/code/selling_count.ipynb
+++ b/eda/code/selling_count.ipynb
@@ -745,20 +745,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "2bec4631",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 사용하지 않는 컬럼 제거한 data csv로 저장\n",
     "df_seling.sort_values('기준_년분기_코드', inplace=True)\n",
-    "df_seling.to_csv('seling_count_data.csv')"
+    "df_seling.to_csv('./../data/seling_count_data.csv')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml_env",
+   "display_name": "pystudy_env",
    "language": "python",
    "name": "python3"
   },
@@ -772,7 +772,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.23"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
