feat : catboost 모델 학습 및 평가

--- a/ml/CatBoost.ipynb
+++ b/ml/CatBoost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 37,
    "id": "9cb0c603",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 38,
    "id": "6a1a9dc6",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 39,
    "id": "ad783af4",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 40,
    "id": "76558bdb",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 41,
    "id": "45627dfb",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 42,
    "id": "aed6abe7",
    "metadata": {},
    "outputs": [
@@ -383,7 +383,7 @@
        "[8 rows x 134 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 43,
    "id": "2e743e78",
    "metadata": {},
    "outputs": [],
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 44,
    "id": "03d4835b",
    "metadata": {},
    "outputs": [],
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 45,
    "id": "c1a862ae",
    "metadata": {},
    "outputs": [],
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 46,
    "id": "923e0325",
    "metadata": {},
    "outputs": [
@@ -452,15 +452,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:\tlearn: 1.8753919\ttest: 1.9160165\tbest: 1.9160165 (0)\ttotal: 19.1ms\tremaining: 19s\n",
-      "100:\tlearn: 0.2522215\ttest: 0.3484266\tbest: 0.3484266 (100)\ttotal: 1.63s\tremaining: 14.5s\n",
-      "200:\tlearn: 0.1371945\ttest: 0.2827709\tbest: 0.2827709 (200)\ttotal: 3.19s\tremaining: 12.7s\n",
-      "300:\tlearn: 0.1052661\ttest: 0.2720823\tbest: 0.2718815 (296)\ttotal: 4.75s\tremaining: 11s\n",
-      "400:\tlearn: 0.0883731\ttest: 0.2676441\tbest: 0.2676441 (400)\ttotal: 6.37s\tremaining: 9.52s\n",
-      "500:\tlearn: 0.0787931\ttest: 0.2649766\tbest: 0.2649766 (500)\ttotal: 7.92s\tremaining: 7.89s\n",
-      "600:\tlearn: 0.0711588\ttest: 0.2629248\tbest: 0.2628856 (595)\ttotal: 9.51s\tremaining: 6.31s\n",
-      "700:\tlearn: 0.0658585\ttest: 0.2619715\tbest: 0.2619715 (700)\ttotal: 11.1s\tremaining: 4.75s\n",
-      "800:\tlearn: 0.0616112\ttest: 0.2611395\tbest: 0.2610229 (798)\ttotal: 12.7s\tremaining: 3.17s\n",
+      "0:\tlearn: 1.8753919\ttest: 1.9160165\tbest: 1.9160165 (0)\ttotal: 20.8ms\tremaining: 20.8s\n",
+      "100:\tlearn: 0.2522215\ttest: 0.3484266\tbest: 0.3484266 (100)\ttotal: 1.78s\tremaining: 15.9s\n",
+      "200:\tlearn: 0.1371945\ttest: 0.2827709\tbest: 0.2827709 (200)\ttotal: 3.44s\tremaining: 13.7s\n",
+      "300:\tlearn: 0.1052661\ttest: 0.2720823\tbest: 0.2718815 (296)\ttotal: 5.11s\tremaining: 11.9s\n",
+      "400:\tlearn: 0.0883731\ttest: 0.2676441\tbest: 0.2676441 (400)\ttotal: 6.7s\tremaining: 10s\n",
+      "500:\tlearn: 0.0787931\ttest: 0.2649766\tbest: 0.2649766 (500)\ttotal: 8.28s\tremaining: 8.25s\n",
+      "600:\tlearn: 0.0711588\ttest: 0.2629248\tbest: 0.2628856 (595)\ttotal: 9.88s\tremaining: 6.56s\n",
+      "700:\tlearn: 0.0658585\ttest: 0.2619715\tbest: 0.2619715 (700)\ttotal: 11.6s\tremaining: 4.94s\n",
+      "800:\tlearn: 0.0616112\ttest: 0.2611395\tbest: 0.2610229 (798)\ttotal: 13.2s\tremaining: 3.29s\n",
       "Stopped by overfitting detector  (50 iterations wait)\n",
       "\n",
       "bestTest = 0.260732796\n",
@@ -469,7 +469,7 @@
       "Shrink model to first 837 iterations.\n",
       "RMSE: 0.2607\n",
       "MAE: 0.0599\n",
-      "R²: 0.9835\n"
+      "R2: 0.9835\n"
      ]
     }
    ],
@@ -500,12 +500,12 @@
     "\n",
     "print(f\"RMSE: {rmse:.4f}\")\n",
     "print(f\"MAE: {mae:.4f}\")\n",
-    "print(f\"R²: {r2:.4f}\")\n"
+    "print(f\"R2: {r2:.4f}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 47,
    "id": "0a31324b",
    "metadata": {},
    "outputs": [
@@ -513,7 +513,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kouls\\AppData\\Local\\Temp\\ipykernel_27124\\2385225164.py:13: FutureWarning: \n",
+      "C:\\Users\\kouls\\AppData\\Local\\Temp\\ipykernel_25864\\2385225164.py:13: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 48,
    "id": "93dde55c",
    "metadata": {},
    "outputs": [
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 49,
    "id": "9cc5ecf2",
    "metadata": {},
    "outputs": [
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 50,
    "id": "4f670e8e",
    "metadata": {},
    "outputs": [
@@ -632,25 +632,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "9637eacf",
+   "execution_count": 53,
+   "id": "d5d0a19f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "평균 RMSE: 0.2427\n",
-      "RMSE 표준편차: 0.0584\n"
+      "RMSE: 0.2607\n",
+      "MAE: 0.0599\n",
+      "R2: 0.9835\n"
      ]
     }
    ],
    "source": [
-    "from catboost import Pool\n",
+    "# KFold\n",
     "from sklearn.model_selection import KFold\n",
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
-    "# KFold 객체 생성 (예: 5겹 교차검증)\n",
+    "# KFold 객체 생성\n",
     "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
     "\n",
     "rmse_scores = []\n",
@@ -659,9 +660,6 @@
     "    X_train_fold, X_val_fold = X_encoded.iloc[train_index], X_encoded.iloc[val_index]\n",
     "    y_train_fold, y_val_fold = y.iloc[train_index], y.iloc[val_index]\n",
     "\n",
-    "    train_pool = Pool(X_train_fold, y_train_fold)\n",
-    "    val_pool = Pool(X_val_fold, y_val_fold)\n",
-    "\n",
     "    model = CatBoostRegressor(\n",
     "        iterations=1000,\n",
     "        learning_rate=0.1,\n",
@@ -669,14 +667,18 @@
     "        early_stopping_rounds=50,\n",
     "        verbose=False\n",
     "    )\n",
-    "    model.fit(train_pool, eval_set=val_pool)\n",
+    "\n",
+    "    model.fit(X_train_fold, y_train_fold, eval_set=(X_val_fold, y_val_fold))\n",
     "\n",
     "    preds = model.predict(X_val_fold)\n",
-    "    rmse = np.sqrt(mean_squared_error(y_val_fold, preds))\n",
-    "    rmse_scores.append(rmse)\n",
+    "    # 성능 평가\n",
+    "    rmse = np.sqrt(mean_squared_error(y_valid, y_pred))\n",
+    "    mae = mean_absolute_error(y_valid, y_pred)\n",
+    "    r2 = r2_score(y_valid, y_pred)\n",
     "\n",
-    "print(f'평균 RMSE: {np.mean(rmse_scores):.4f}')\n",
-    "print(f'RMSE 표준편차: {np.std(rmse_scores):.4f}')"
+    "print(f\"RMSE: {rmse:.4f}\")\n",
+    "print(f\"MAE: {mae:.4f}\")\n",
+    "print(f\"R2: {r2:.4f}\")"
    ]
   }
  ],
