--- a/ml/RandomForest_clf_fast.ipynb
+++ b/ml/RandomForest_clf_fast.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ff6676c0",
    "metadata": {},
    "outputs": [],
@@ -19,27 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "6ec59727",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os, sys\n",
-    "# 1) 주피터/윈도우에서 표준출력 UTF-8로\n",
-    "try:\n",
-    "    sys.stdout.reconfigure(encoding=\"utf-8\")  # Py3.7+\n",
-    "except Exception:\n",
-    "    pass\n",
-    "os.environ[\"PYTHONIOENCODING\"] = \"utf-8\"\n",
-    "\n",
-    "# 2) joblib 병렬을 threading으로 (멀티프로세스에서의 인코딩 이슈 회피)\n",
-    "from joblib import parallel_backend\n",
-    "THREADING_BACKEND = parallel_backend(\"threading\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "2a534c85",
    "metadata": {},
    "outputs": [],
@@ -49,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9eb450e8",
    "metadata": {},
    "outputs": [],
@@ -60,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "07fce54a",
    "metadata": {},
    "outputs": [],
@@ -73,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "69c28ea6",
    "metadata": {},
    "outputs": [],
@@ -89,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e14decd7",
    "metadata": {},
    "outputs": [],
@@ -114,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9cfb507c",
    "metadata": {},
    "outputs": [
@@ -846,7 +826,7 @@
        "RandomForestClassifier(n_estimators=400, n_jobs=-1, random_state=42)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "5cfe3be9",
    "metadata": {},
    "outputs": [
@@ -894,195 +874,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "0719dd79",
+   "execution_count": null,
+   "id": "6ec59727",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
-    "# from sklearn.compose import ColumnTransformer\n",
-    "# from sklearn.pipeline import Pipeline\n",
-    "# from sklearn.svm import SVC\n"
+    "import os, sys\n",
+    "# 1) 주피터/윈도우에서 표준출력 UTF-8로\n",
+    "try:\n",
+    "    sys.stdout.reconfigure(encoding=\"utf-8\")  # Py3.7+\n",
+    "except Exception:\n",
+    "    pass\n",
+    "os.environ[\"PYTHONIOENCODING\"] = \"utf-8\"\n",
+    "\n",
+    "# 2) joblib 병렬을 threading으로 (멀티프로세스에서의 인코딩 이슈 회피)\n",
+    "from joblib import parallel_backend\n",
+    "THREADING_BACKEND = parallel_backend(\"threading\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "03e2a764",
+   "execution_count": null,
+   "id": "d51ec442",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# present_cat = [c for c in cat_cols if c in X.columns] if 'cat_cols' in globals() else []\n",
-    "# present_num = [c for c in num_cols if c in X.columns] if 'num_cols' in globals() else []\n",
+    "from tempfile import mkdtemp\n",
+    "from joblib import parallel_backend\n",
+    "import numpy as np\n",
     "\n",
-    "# print(\"present_num:\", len(present_num), \"present_cat:\", len(present_cat))\n",
+    "# 파이프라인 변환 캐싱(중복 변환 속도↑)\n",
+    "cache_dir = mkdtemp()\n",
+    "THREADING_BACKEND = parallel_backend(\"threading\")  # 윈도우 한글 인코딩 이슈 회피\n",
     "\n",
-    "# # 2) 데이터 분리 (이미 되어 있으면 건너뛰어도 됨)\n",
-    "# if not all(v in globals() for v in [\"X_train\",\"X_valid\",\"y_train\",\"y_valid\"]):\n",
-    "#     X_train, X_valid, y_train, y_valid = train_test_split(\n",
-    "#         X, y, test_size=0.2, random_state=42, stratify=y\n",
-    "#     )\n",
+    "# (선택) 탐색은 학습셋 일부만 사용 → 속도↑ (원하면 1.0으로 바꿔 풀셋 탐색)\n",
+    "SEARCH_FRACTION = 0.6\n",
+    "rng = np.random.RandomState(42)\n",
     "\n",
-    "# # 3) 파이프라인 구성 분기\n",
-    "# if len(present_cat) > 0:\n",
-    "#     # (A) 원본 범주형 컬럼이 아직 X에 남아있는 경우 → 원-핫 + 수치 스케일\n",
-    "#     preprocessor = ColumnTransformer(\n",
-    "#         transformers=[\n",
-    "#             (\"num\", StandardScaler(), present_num),\n",
-    "#             (\"cat\", OneHotEncoder(handle_unknown=\"ignore\", drop=None), present_cat),\n",
-    "#         ],\n",
-    "#         remainder=\"drop\"\n",
-    "#     )\n",
-    "# else:\n",
-    "#     # (B) 이미 원-핫되어 범주 원본 컬럼이 없는 경우 → 전체에 스케일만 적용\n",
-    "#     preprocessor = ColumnTransformer(\n",
-    "#         transformers=[(\"all\", StandardScaler(), list(X.columns))],\n",
-    "#         remainder=\"drop\"\n",
-    "#     )\n",
+    "# X, y가 이미 정의돼 있다고 가정\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42, stratify=y\n",
+    ")\n",
     "\n",
-    "# svc = SVC(probability=True)  # ROC/AUC 및 threshold 적용 위해 확률 출력\n",
-    "\n",
-    "# pipe = Pipeline(steps=[\n",
-    "#     (\"prep\", preprocessor),\n",
-    "#     (\"clf\", svc),\n",
-    "# ])"
+    "idx = rng.choice(len(X_train), size=int(len(X_train)*SEARCH_FRACTION), replace=False)\n",
+    "X_search = X_train.iloc[idx]\n",
+    "y_search = y_train.iloc[idx]\n",
+    "print(f\"Search subset: {X_search.shape}, Full train: {X_train.shape}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "404a60ad",
+   "execution_count": null,
+   "id": "d08801bc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from sklearn.model_selection import GridSearchCV\n",
-    "# from joblib import parallel_backend\n",
-    "# THREADING_BACKEND = parallel_backend(\"threading\")  # 윈도우 한글 인코딩 이슈 회피\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.svm import SVC\n",
     "\n",
-    "# param_grid = {\n",
-    "#     \"clf__kernel\": [\"linear\", \"rbf\", \"poly\", \"sigmoid\"],\n",
-    "#     \"clf__C\": [0.1, 1, 3, 10, 30, 100],\n",
-    "# }\n",
+    "# 현재 X에 실제로 존재하는 컬럼만 사용 (이미 원-핫된 경우 대응)\n",
+    "present_cat = [c for c in cat_cols if c in X.columns] if 'cat_cols' in globals() else []\n",
+    "present_num = [c for c in num_cols if c in X.columns] if 'num_cols' in globals() else []\n",
     "\n",
-    "# gscv = GridSearchCV(\n",
-    "#     estimator=pipe,\n",
-    "#     param_grid=param_grid,\n",
-    "#     scoring=\"roc_auc\",\n",
-    "#     cv=5,\n",
-    "#     n_jobs=-1,\n",
-    "#     refit=True\n",
-    "# )\n",
+    "if present_cat:\n",
+    "    preprocessor = ColumnTransformer(\n",
+    "        [(\"num\", StandardScaler(), present_num),\n",
+    "         (\"cat\", OneHotEncoder(handle_unknown=\"ignore\"), present_cat)],\n",
+    "        remainder=\"drop\"\n",
+    "    )\n",
+    "else:\n",
+    "    preprocessor = ColumnTransformer(\n",
+    "        [(\"all\", StandardScaler(), list(X.columns))],\n",
+    "        remainder=\"drop\"\n",
+    "    )\n",
     "\n",
-    "# with THREADING_BACKEND:\n",
-    "#     gscv.fit(X_train, y_train)\n",
+    "# 탐색 단계는 확률 OFF → 훨씬 빠름\n",
+    "svc_fast = SVC(probability=False)\n",
     "\n",
-    "# print(\"GridSearch best params:\", gscv.best_params_)\n",
-    "# print(\"GridSearch best ROC-AUC (cv):\", round(gscv.best_score_, 6))"
+    "pipe_fast = Pipeline(\n",
+    "    steps=[(\"prep\", preprocessor), (\"clf\", svc_fast)],\n",
+    "    memory=cache_dir\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "34d8f140",
+   "execution_count": null,
+   "id": "31314c73",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from sklearn.model_selection import RandomizedSearchCV\n",
-    "# from scipy.stats import loguniform\n",
-    "# from joblib import parallel_backend\n",
-    "# THREADING_BACKEND = parallel_backend(\"threading\")\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
-    "# param_dist = {\n",
-    "#     \"clf__kernel\": [\"linear\", \"rbf\", \"poly\", \"sigmoid\"],\n",
-    "#     \"clf__C\": loguniform(1e-3, 1e3),\n",
-    "# }\n",
+    "# 작은 그리드: kernel은 linear/rbf만, C는 소수만, rbf일 때 gamma 간단히\n",
+    "param_grid = [\n",
+    "    {\"clf__kernel\": [\"linear\"],\n",
+    "     \"clf__C\": [0.1, 1, 3, 10]},\n",
+    "    {\"clf__kernel\": [\"rbf\"],\n",
+    "     \"clf__C\": [0.1, 1, 3, 10],\n",
+    "     \"clf__gamma\": [\"scale\", \"auto\"]},\n",
+    "]\n",
     "\n",
-    "# rscv = RandomizedSearchCV(\n",
-    "#     estimator=pipe,\n",
-    "#     param_distributions=param_dist,\n",
-    "#     n_iter=20,\n",
-    "#     scoring=\"roc_auc\",\n",
-    "#     cv=5,\n",
-    "#     n_jobs=-1,\n",
-    "#     random_state=42,\n",
-    "#     refit=True\n",
-    "# )\n",
+    "gscv_fast = GridSearchCV(\n",
+    "    estimator=pipe_fast,\n",
+    "    param_grid=param_grid,\n",
+    "    scoring=\"roc_auc\",\n",
+    "    cv=3,            # 5→3으로 줄여 속도↑\n",
+    "    n_jobs=-1,\n",
+    "    refit=True,\n",
+    "    verbose=1\n",
+    ")\n",
     "\n",
-    "# with THREADING_BACKEND:\n",
-    "#     rscv.fit(X_train, y_train)\n",
+    "with THREADING_BACKEND:\n",
+    "    gscv_fast.fit(X_search, y_search)\n",
     "\n",
-    "# print(\"RandomSearch best params:\", rscv.best_params_)\n",
-    "# print(\"RandomSearch best ROC-AUC (cv):\", round(rscv.best_score_, 6))\n"
+    "print(\"GridSearch(best params):\", gscv_fast.best_params_)\n",
+    "print(\"GridSearch(best ROC-AUC cv):\", round(gscv_fast.best_score_, 6))\n",
+    "best_params = gscv_fast.best_params_\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "630bd1f0",
+   "execution_count": null,
+   "id": "c23eb7b3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from sklearn.metrics import (\n",
-    "#     accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
-    "# )\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.metrics import (accuracy_score, precision_score, recall_score,\n",
+    "                             f1_score, roc_auc_score, confusion_matrix, roc_curve)\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "# best_model = gscv if gscv.best_score_ >= rscv.best_score_ else rscv\n",
-    "# print(\">> Using:\", \"GridSearch\" if best_model is gscv else \"RandomSearch\")\n",
+    "# 최종 모델은 확률 ON + 전체 학습셋으로 재학습\n",
+    "svc_final = SVC(\n",
+    "    probability=True,\n",
+    "    kernel=best_params.get(\"clf__kernel\", \"rbf\"),\n",
+    "    C=best_params.get(\"clf__C\", 1.0),\n",
+    "    gamma=best_params.get(\"clf__gamma\", \"scale\")\n",
+    ")\n",
     "\n",
-    "# proba = best_model.predict_proba(X_valid)[:, 1]\n",
-    "# THRESH = 0.35\n",
-    "# y_pred = (proba >= THRESH).astype(int)\n",
+    "pipe_final = Pipeline([(\"prep\", preprocessor), (\"clf\", svc_final)], memory=cache_dir)\n",
     "\n",
-    "# acc  = accuracy_score(y_valid, y_pred)\n",
-    "# prec = precision_score(y_valid, y_pred, zero_division=0)\n",
-    "# rec  = recall_score(y_valid, y_pred, zero_division=0)\n",
-    "# f1   = f1_score(y_valid, y_pred)\n",
-    "# auc  = roc_auc_score(y_valid, proba)\n",
+    "with THREADING_BACKEND:\n",
+    "    pipe_final.fit(X_train, y_train)\n",
     "\n",
-    "# print(\"\\n=== Hold-out Metrics (thr=0.35) ===\")\n",
-    "# print(f\"Accuracy : {acc:.6f}\")\n",
-    "# print(f\"Precision: {prec:.6f}\")\n",
-    "# print(f\"Recall   : {rec:.6f}\")\n",
-    "# print(f\"F1 Score : {f1:.6f}\")\n",
-    "# print(f\"AUC(ROC) : {auc:.6f}\")\n"
+    "# 평가 (threshold=0.35)\n",
+    "proba = pipe_final.predict_proba(X_valid)[:, 1]\n",
+    "THRESH = 0.35\n",
+    "y_pred = (proba >= THRESH).astype(int)\n",
+    "\n",
+    "acc  = accuracy_score(y_valid, y_pred)\n",
+    "prec = precision_score(y_valid, y_pred, zero_division=0)\n",
+    "rec  = recall_score(y_valid, y_pred, zero_division=0)\n",
+    "f1   = f1_score(y_valid, y_pred)\n",
+    "auc  = roc_auc_score(y_valid, proba)\n",
+    "\n",
+    "print(\"\\n=== Hold-out Metrics (thr=0.35) ===\")\n",
+    "print(f\"Accuracy : {acc:.6f}\")\n",
+    "print(f\"Precision: {prec:.6f}\")\n",
+    "print(f\"Recall   : {rec:.6f}\")\n",
+    "print(f\"F1 Score : {f1:.6f}\")\n",
+    "print(f\"AUC(ROC) : {auc:.6f}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "13578a40",
+   "execution_count": null,
+   "id": "f92f9cef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import numpy as np\n",
-    "# import matplotlib.pyplot as plt\n",
-    "# from sklearn.metrics import confusion_matrix, roc_curve\n",
+    "import numpy as np\n",
     "\n",
-    "# cm = confusion_matrix(y_valid, y_pred)\n",
-    "# tn, fp, fn, tp = cm.ravel()\n",
+    "cm = confusion_matrix(y_valid, y_pred)\n",
+    "tn, fp, fn, tp = cm.ravel()\n",
     "\n",
-    "# plt.figure(figsize=(5,4))\n",
-    "# plt.imshow(cm, interpolation=\"nearest\")\n",
-    "# plt.title(\"Confusion Matrix (thr=0.35)\")\n",
-    "# plt.xticks([0,1], [\"Pred 0\", \"Pred 1\"])\n",
-    "# plt.yticks([0,1], [\"True 0\", \"True 1\"])\n",
-    "# for (i, j), v in np.ndenumerate(cm):\n",
-    "#     plt.text(j, i, str(v), ha=\"center\", va=\"center\")\n",
-    "# plt.xlabel(\"Predicted\")\n",
-    "# plt.ylabel(\"True\")\n",
-    "# plt.tight_layout()\n",
-    "# plt.show()\n",
+    "plt.figure(figsize=(5,4))\n",
+    "plt.imshow(cm, interpolation=\"nearest\")\n",
+    "plt.title(\"Confusion Matrix (thr=0.35)\")\n",
+    "plt.xticks([0,1], [\"Pred 0\", \"Pred 1\"]); plt.yticks([0,1], [\"True 0\", \"True 1\"])\n",
+    "for (i, j), v in np.ndenumerate(cm):\n",
+    "    plt.text(j, i, str(v), ha=\"center\", va=\"center\")\n",
+    "plt.xlabel(\"Predicted\"); plt.ylabel(\"True\"); plt.tight_layout(); plt.show()\n",
     "\n",
-    "# fpr, tpr, ths = roc_curve(y_valid, proba)\n",
-    "# plt.figure(figsize=(5,4))\n",
-    "# plt.plot(fpr, tpr, label=f\"AUC={auc:.3f}\")\n",
-    "# plt.plot([0,1], [0,1], linestyle=\"--\")\n",
-    "# plt.xlabel(\"False Positive Rate\")\n",
-    "# plt.ylabel(\"True Positive Rate\")\n",
-    "# plt.title(\"ROC Curve\")\n",
-    "# plt.legend(loc=\"lower right\")\n",
-    "# plt.tight_layout()\n",
-    "# plt.show()\n"
+    "fpr, tpr, ths = roc_curve(y_valid, proba)\n",
+    "plt.figure(figsize=(5,4))\n",
+    "plt.plot(fpr, tpr, label=f\"AUC={auc:.3f}\")\n",
+    "plt.plot([0,1], [0,1], linestyle=\"--\")\n",
+    "plt.xlabel(\"False Positive Rate\"); plt.ylabel(\"True Positive Rate\")\n",
+    "plt.title(\"ROC Curve\"); plt.legend(loc=\"lower right\")\n",
+    "plt.tight_layout(); plt.show()\n"
    ]
   }
  ],
