--- a/ml/CatBoost_Classification_mean.ipynb
+++ b/ml/CatBoost_Classification_mean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "aef4b78f",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "17658112",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "b367856b",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "31714295",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "ea41cbc3",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "4ed9619b",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "e19dd209",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "a677adb2",
    "metadata": {},
    "outputs": [
@@ -113,9 +113,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:\tlearn: 0.6902038\ttest: 0.6852111\tbest: 0.6852111 (0)\ttotal: 26.5ms\tremaining: 13.2s\n",
-      "100:\tlearn: 0.7573797\ttest: 0.7438463\tbest: 0.7438463 (100)\ttotal: 1.86s\tremaining: 7.35s\n",
-      "200:\tlearn: 0.7881325\ttest: 0.7501501\tbest: 0.7515509 (185)\ttotal: 3.75s\tremaining: 5.57s\n",
+      "0:\tlearn: 0.6902038\ttest: 0.6852111\tbest: 0.6852111 (0)\ttotal: 22.9ms\tremaining: 11.4s\n",
+      "100:\tlearn: 0.7573797\ttest: 0.7438463\tbest: 0.7438463 (100)\ttotal: 1.94s\tremaining: 7.65s\n",
+      "200:\tlearn: 0.7881325\ttest: 0.7501501\tbest: 0.7515509 (185)\ttotal: 3.72s\tremaining: 5.54s\n",
       "Stopped by overfitting detector  (50 iterations wait)\n",
       "\n",
       "bestTest = 0.7515509306\n",
@@ -127,10 +127,10 @@
     {
      "data": {
       "text/plain": [
-       "<catboost.core.CatBoostClassifier at 0x2d2f77ac620>"
+       "<catboost.core.CatBoostClassifier at 0x2155d62b7d0>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "167c34df",
    "metadata": {},
    "outputs": [
@@ -192,21 +192,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "id": "b1199524",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 3 folds for each of 324 candidates, totalling 972 fits\n",
-      "최적의 파라미터: {'depth': 7, 'iterations': 250, 'learning_rate': np.float64(0.06999999999999999)}\n",
-      "최적화된 모델 객체: <catboost.core.CatBoostClassifier object at 0x000002D2908D9940>\n",
-      "최적화된 점수: 0.7478070951447081\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# GridSearchCV\n",
     "from sklearn.model_selection import GridSearchCV\n",
@@ -233,18 +222,18 @@
     "    return_train_score=True   \n",
     ")\n",
     "\n",
-    "# 모델 학습\n",
-    "grid.fit(X_train, y_train_binary, eval_set=(X_valid, y_valid_binary))\n",
+    "# # 모델 학습\n",
+    "# grid.fit(X_train, y_train_binary, eval_set=(X_valid, y_valid_binary))\n",
     "\n",
-    "# 결과 \n",
-    "print('최적의 파라미터:', grid.best_params_) \n",
-    "print('최적화된 모델 객체:', grid.best_estimator_) \n",
-    "print('최적화된 점수:', grid.best_score_) "
+    "# # 결과 \n",
+    "# print('최적의 파라미터:', grid.best_params_) \n",
+    "# print('최적화된 모델 객체:', grid.best_estimator_) \n",
+    "# print('최적화된 점수:', grid.best_score_) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "id": "9b16de9c",
    "metadata": {},
    "outputs": [
@@ -252,10 +241,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:\tlearn: 0.6966079\ttest: 0.6943166\tbest: 0.6943166 (0)\ttotal: 31.5ms\tremaining: 7.84s\n",
-      "100:\tlearn: 0.7568794\ttest: 0.7419452\tbest: 0.7419452 (94)\ttotal: 2.68s\tremaining: 3.96s\n",
-      "200:\tlearn: 0.7849305\ttest: 0.7526516\tbest: 0.7526516 (200)\ttotal: 5.29s\tremaining: 1.29s\n",
-      "249:\tlearn: 0.7962710\ttest: 0.7536522\tbest: 0.7550530 (241)\ttotal: 6.62s\tremaining: 0us\n",
+      "0:\tlearn: 0.6966079\ttest: 0.6943166\tbest: 0.6943166 (0)\ttotal: 34.2ms\tremaining: 8.52s\n",
+      "100:\tlearn: 0.7568794\ttest: 0.7419452\tbest: 0.7419452 (94)\ttotal: 2.82s\tremaining: 4.17s\n",
+      "200:\tlearn: 0.7849305\ttest: 0.7526516\tbest: 0.7526516 (200)\ttotal: 5.49s\tremaining: 1.34s\n",
+      "249:\tlearn: 0.7962710\ttest: 0.7536522\tbest: 0.7550530 (241)\ttotal: 6.81s\tremaining: 0us\n",
       "\n",
       "bestTest = 0.7550530318\n",
       "bestIteration = 241\n",
@@ -302,7 +291,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
+   "id": "3bb33b04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7551 (75.51%)\n",
+      "Precision: 0.7739 (77.39%)\n",
+      "Recall: 0.6981 (69.81%)\n",
+      "F1 Score: 0.7341\n",
+      "AUC: 0.8320\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 결과 확인\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
+    "\n",
+    "# 예측값\n",
+    "y_pred = model.predict(X_valid)\n",
+    "\n",
+    "# 확률 예측값\n",
+    "y_proba = model.predict_proba(X_valid)[:, 1]\n",
+    "\n",
+    "# 평가 지표 계산\n",
+    "accuracy = accuracy_score(y_valid_binary, y_pred)\n",
+    "precision = precision_score(y_valid_binary, y_pred)\n",
+    "recall = recall_score(y_valid_binary, y_pred)\n",
+    "f1 = f1_score(y_valid_binary, y_pred)\n",
+    "auc = roc_auc_score(y_valid_binary, y_proba)\n",
+    "\n",
+    "# 출력\n",
+    "print(f\"Accuracy: {accuracy:.4f} ({accuracy*100:.2f}%)\")\n",
+    "print(f\"Precision: {precision:.4f} ({precision*100:.2f}%)\")\n",
+    "print(f\"Recall: {recall:.4f} ({recall*100:.2f}%)\")\n",
+    "print(f\"F1 Score: {f1:.4f}\")\n",
+    "print(f\"AUC: {auc:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "080d8eeb",
    "metadata": {},
    "outputs": [
@@ -334,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "id": "ae6d9af2",
    "metadata": {},
    "outputs": [
@@ -374,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "id": "bd5b3854",
    "metadata": {},
    "outputs": [
@@ -382,7 +414,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kouls\\AppData\\Local\\Temp\\ipykernel_10236\\4087850831.py:11: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+      "C:\\Users\\kouls\\AppData\\Local\\Temp\\ipykernel_17760\\4087850831.py:11: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
       "  plt.legend()\n"
      ]
     },
