--- a/ml/rf_clf_final.ipynb
+++ b/ml/rf_clf_final.ipynb
@@ -10,13 +10,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "836c9b42",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# 2) Imports\n",
     "import os, sys, numpy as np, pandas as pd, matplotlib.pyplot as plt\n",
     "from pathlib import Path\n",
     "from sklearn.compose import ColumnTransformer\n",
@@ -47,34 +45,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "4a2836d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# 3) Paths & Config\n",
-    "DATA_DIR = Path(\"../data\")\n",
-    "TRAIN_FEAT_PATH = DATA_DIR / \"train_features.csv\"\n",
-    "TRAIN_TGT_PATH  = DATA_DIR / \"train_target.csv\"\n",
-    "VAL_FEAT_PATH   = DATA_DIR / \"val_features.csv\"\n",
-    "VAL_TGT_PATH    = DATA_DIR / \"val_target.csv\"\n",
-    "TEST_FEAT_PATH  = DATA_DIR / \"test_features.csv\"\n",
-    "TEST_TGT_PATH   = DATA_DIR / \"test_target.csv\"\n",
-    "KEY_COL = \"\"  # 공통 키가 있을 때만 지정\n",
+    "TRAIN_FEAT_PATH = \"../datatrain_features.csv\"\n",
+    "TRAIN_TGT_PATH  = \"../datatrain_target.csv\"\n",
+    "VAL_FEAT_PATH   = \"../dataval_features.csv\"\n",
+    "VAL_TGT_PATH    = \"../dataval_target.csv\"\n",
+    "TEST_FEAT_PATH  = \"../datatest_features.csv\"\n",
+    "TEST_TGT_PATH   = \"../datatest_target.csv\"\n",
+    "KEY_COL = \"\"\n",
     "TARGET_DTYPE = int\n",
-    "MODEL_OUT = DATA_DIR / \"rf_pipeline.joblib\"\n"
+    "MODEL_OUT = \"../datarf_pipeline.joblib\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "cf2a9231",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# 4) Helper functions\n",
     "import pandas as pd, numpy as np, matplotlib.pyplot as plt\n",
     "from sklearn.metrics import accuracy_score, f1_score, precision_score, recall_score, roc_auc_score, confusion_matrix\n",
     "\n",
@@ -126,292 +119,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "df4e43ab",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "train_features: (25812, 66)\n",
-      "train_target  : (25812, 1)\n",
-      "val_features  : (3687, 66)\n",
-      "val_target    : (3687, 1)\n",
-      "test_features : (7376, 66)\n",
-      "test_target   : (7376, 1)\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Perhaps you forgot a comma? (3179905375.py, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mprint(\"train_features:\" train_feat.shape)\u001b[39m\n          ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax. Perhaps you forgot a comma?\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>자치구_encoded</th>\n",
-       "      <th>업종_encoded</th>\n",
-       "      <th>상권변화_encoded</th>\n",
-       "      <th>당월_매출_금액_lag1</th>\n",
-       "      <th>당월_매출_금액_lag2</th>\n",
-       "      <th>당월_매출_건수_lag1</th>\n",
-       "      <th>당월_매출_건수_lag2</th>\n",
-       "      <th>점포_수_lag1</th>\n",
-       "      <th>점포_수_lag2</th>\n",
-       "      <th>유사_업종_점포_수_lag1</th>\n",
-       "      <th>...</th>\n",
-       "      <th>주말_매출_비율</th>\n",
-       "      <th>야간_매출_비율</th>\n",
-       "      <th>프랜차이즈_비율</th>\n",
-       "      <th>경쟁_밀도</th>\n",
-       "      <th>점포_포화도</th>\n",
-       "      <th>상권_매출_평균</th>\n",
-       "      <th>업종_매출_평균</th>\n",
-       "      <th>상권_대비_매출</th>\n",
-       "      <th>업종_대비_매출</th>\n",
-       "      <th>위험_점수</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5.297716e+09</td>\n",
-       "      <td>5.204871e+09</td>\n",
-       "      <td>968314.0</td>\n",
-       "      <td>926951.0</td>\n",
-       "      <td>117.0</td>\n",
-       "      <td>122.0</td>\n",
-       "      <td>127.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.344034</td>\n",
-       "      <td>0.201217</td>\n",
-       "      <td>0.084746</td>\n",
-       "      <td>1.076271</td>\n",
-       "      <td>0.791548</td>\n",
-       "      <td>4.707631e+10</td>\n",
-       "      <td>3.917574e+09</td>\n",
-       "      <td>0.112535</td>\n",
-       "      <td>1.352295</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>9.093194e+10</td>\n",
-       "      <td>8.371075e+10</td>\n",
-       "      <td>104428.0</td>\n",
-       "      <td>106351.0</td>\n",
-       "      <td>449.0</td>\n",
-       "      <td>435.0</td>\n",
-       "      <td>450.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.360686</td>\n",
-       "      <td>0.000462</td>\n",
-       "      <td>0.002222</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>3.037651</td>\n",
-       "      <td>4.707631e+10</td>\n",
-       "      <td>8.333667e+09</td>\n",
-       "      <td>1.931586</td>\n",
-       "      <td>10.911396</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1.405966e+10</td>\n",
-       "      <td>1.169514e+10</td>\n",
-       "      <td>384496.0</td>\n",
-       "      <td>371181.0</td>\n",
-       "      <td>282.0</td>\n",
-       "      <td>279.0</td>\n",
-       "      <td>283.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.345577</td>\n",
-       "      <td>0.077217</td>\n",
-       "      <td>0.003534</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.907834</td>\n",
-       "      <td>4.707631e+10</td>\n",
-       "      <td>1.555643e+09</td>\n",
-       "      <td>0.298657</td>\n",
-       "      <td>9.037842</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3.050788e+09</td>\n",
-       "      <td>3.301891e+09</td>\n",
-       "      <td>21762.0</td>\n",
-       "      <td>20905.0</td>\n",
-       "      <td>170.0</td>\n",
-       "      <td>163.0</td>\n",
-       "      <td>170.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.225013</td>\n",
-       "      <td>0.009089</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.994152</td>\n",
-       "      <td>1.150113</td>\n",
-       "      <td>4.707631e+10</td>\n",
-       "      <td>1.164563e+10</td>\n",
-       "      <td>0.064805</td>\n",
-       "      <td>0.261968</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4.388158e+08</td>\n",
-       "      <td>2.608825e+08</td>\n",
-       "      <td>2240.0</td>\n",
-       "      <td>2009.0</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.166662</td>\n",
-       "      <td>0.002052</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.989583</td>\n",
-       "      <td>0.642710</td>\n",
-       "      <td>4.707631e+10</td>\n",
-       "      <td>5.055552e+08</td>\n",
-       "      <td>0.009321</td>\n",
-       "      <td>0.867988</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 66 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   자치구_encoded  업종_encoded  상권변화_encoded  당월_매출_금액_lag1  당월_매출_금액_lag2  \\\n",
-       "0            0           0             3   5.297716e+09   5.204871e+09   \n",
-       "1            0           1             3   9.093194e+10   8.371075e+10   \n",
-       "2            0           2             3   1.405966e+10   1.169514e+10   \n",
-       "3            0           3             3   3.050788e+09   3.301891e+09   \n",
-       "4            0           4             3   4.388158e+08   2.608825e+08   \n",
-       "\n",
-       "   당월_매출_건수_lag1  당월_매출_건수_lag2  점포_수_lag1  점포_수_lag2  유사_업종_점포_수_lag1  ...  \\\n",
-       "0       968314.0       926951.0      117.0      122.0            127.0  ...   \n",
-       "1       104428.0       106351.0      449.0      435.0            450.0  ...   \n",
-       "2       384496.0       371181.0      282.0      279.0            283.0  ...   \n",
-       "3        21762.0        20905.0      170.0      163.0            170.0  ...   \n",
-       "4         2240.0         2009.0       95.0       92.0             95.0  ...   \n",
-       "\n",
-       "   주말_매출_비율  야간_매출_비율  프랜차이즈_비율     경쟁_밀도    점포_포화도      상권_매출_평균  \\\n",
-       "0  0.344034  0.201217  0.084746  1.076271  0.791548  4.707631e+10   \n",
-       "1  0.360686  0.000462  0.002222  1.000000  3.037651  4.707631e+10   \n",
-       "2  0.345577  0.077217  0.003534  1.000000  1.907834  4.707631e+10   \n",
-       "3  0.225013  0.009089  0.000000  0.994152  1.150113  4.707631e+10   \n",
-       "4  0.166662  0.002052  0.000000  0.989583  0.642710  4.707631e+10   \n",
-       "\n",
-       "       업종_매출_평균  상권_대비_매출   업종_대비_매출  위험_점수  \n",
-       "0  3.917574e+09  0.112535   1.352295      1  \n",
-       "1  8.333667e+09  1.931586  10.911396      0  \n",
-       "2  1.555643e+09  0.298657   9.037842      1  \n",
-       "3  1.164563e+10  0.064805   0.261968      1  \n",
-       "4  5.055552e+08  0.009321   0.867988      1  \n",
-       "\n",
-       "[5 rows x 66 columns]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>closure_risk</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   closure_risk\n",
-       "0             1\n",
-       "1             0\n",
-       "2             1\n",
-       "3             1\n",
-       "4             0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "\n",
-    "# 5) Load data & preview\n",
     "train_feat = read_csv_or_none(TRAIN_FEAT_PATH)\n",
     "train_tgt  = read_csv_or_none(TRAIN_TGT_PATH)\n",
     "val_feat   = read_csv_or_none(VAL_FEAT_PATH)\n",
@@ -419,12 +140,12 @@
     "test_feat  = read_csv_or_none(TEST_FEAT_PATH)\n",
     "test_tgt   = read_csv_or_none(TEST_TGT_PATH)\n",
     "\n",
-    "print(\"train_features:\", None if train_feat is None else train_feat.shape)\n",
-    "print(\"train_target  :\", None if train_tgt  is None else train_tgt.shape)\n",
-    "print(\"val_features  :\", None if val_feat   is None else val_feat.shape)\n",
-    "print(\"val_target    :\", None if val_tgt    is None else val_tgt.shape)\n",
-    "print(\"test_features :\", None if test_feat  is None else test_feat.shape)\n",
-    "print(\"test_target   :\", None if test_tgt   is None else test_tgt.shape)\n",
+    "print(\"train_features:\" train_feat.shape)\n",
+    "print(\"train_target  :\" train_tgt.shape)\n",
+    "print(\"val_features  :\" val_feat.shape)\n",
+    "print(\"val_target    :\" val_tgt.shape)\n",
+    "print(\"test_features :\" test_feat.shape)\n",
+    "print(\"test_target   :\" test_tgt.shape)\n",
     "\n",
     "display(train_feat.head() if train_feat is not None else None)\n",
     "display(train_tgt.head() if train_tgt is not None else None)\n"
@@ -432,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "2ba474c5",
    "metadata": {},
    "outputs": [
@@ -450,8 +171,6 @@
     }
    ],
    "source": [
-    "\n",
-    "# 6) Align splits\n",
     "X_train, y_train = align_by_key(train_feat, train_tgt, KEY_COL or None, TARGET_DTYPE)\n",
     "X_val,   y_val   = align_by_key(val_feat,   val_tgt,   KEY_COL or None, TARGET_DTYPE)\n",
     "X_test,  y_test  = align_by_key(test_feat,  test_tgt,  KEY_COL or None, TARGET_DTYPE)\n",
@@ -466,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "d5f08c98",
    "metadata": {},
    "outputs": [
@@ -496,8 +215,6 @@
     }
    ],
    "source": [
-    "\n",
-    "# 7) Preprocessing + Baseline RF\n",
     "assert X_train is not None, \"train 데이터를 먼저 준비하세요.\"\n",
     "\n",
     "num_cols, cat_cols = split_num_cat(X_train)\n",
@@ -534,13 +251,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "e634e323",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# 8) RandomizedSearchCV 설정\n",
     "param_distributions = {\n",
     "    'clf__n_estimators': randint(120, 320),\n",
     "    'clf__max_depth': [None, 10, 14, 18],\n",
@@ -555,7 +270,7 @@
     "    n_iter=20,\n",
     "    cv=3,\n",
     "    scoring='accuracy',\n",
-    "    n_jobs=1,      # Windows 인코딩 이슈 회피\n",
+    "    n_jobs=1,\n",
     "    verbose=0,\n",
     "    random_state=42,\n",
     ")\n"
@@ -563,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "25085fcf",
    "metadata": {},
    "outputs": [
@@ -577,8 +292,6 @@
     }
    ],
    "source": [
-    "\n",
-    "# 9) 튜닝 실행\n",
     "rnd.fit(X_train, y_train)\n",
     "print(\"최적 파라미터:\", rnd.best_params_)\n",
     "print(\"최적 점수   :\", f\"{rnd.best_score_:.4f}\")\n",
@@ -587,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "2c3dc12c",
    "metadata": {},
    "outputs": [
@@ -639,8 +352,6 @@
     }
    ],
    "source": [
-    "\n",
-    "# 10) 튜닝 모델 평가\n",
     "if X_val is not None and y_val is not None:\n",
     "    evaluate(\"Validation (Tuned)\", X_val, y_val)\n",
     "if X_test is not None and y_test is not None:\n",
@@ -649,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "d9868fab",
    "metadata": {},
    "outputs": [
@@ -882,8 +593,6 @@
     }
    ],
    "source": [
-    "\n",
-    "# 11) Feature Importances (Top-30)\n",
     "clf = pipe.named_steps[\"clf\"]\n",
     "ohe = pipe.named_steps[\"prep\"].named_transformers_[\"cat\"]\n",
     "\n",
@@ -924,16 +633,14 @@
     }
    ],
    "source": [
-    "\n",
-    "# 12) 모델 저장\n",
     "joblib.dump(pipe, MODEL_OUT)\n",
-    "MODEL_OUT, Path(MODEL_OUT).exists()\n"
+    "MODEL_OUT, Path(MODEL_OUT).exists()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pystudy_env",
    "language": "python",
    "name": "python3"
   },
@@ -947,7 +654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
