--- a/model/xgboost/xgb_classifier.ipynb
+++ b/model/xgboost/xgb_classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "id": "501620fc",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "id": "9e13cbc3",
    "metadata": {},
    "outputs": [],
@@ -38,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "id": "03b32de3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('./../eda/data/merged_data.csv')"
+    "df = pd.read_csv('./../../eda/data/merged_data.csv')"
    ]
   },
   {
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "id": "29158ec4",
    "metadata": {},
    "outputs": [],
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "id": "ab9b8ce0",
    "metadata": {},
    "outputs": [
@@ -608,12 +608,12 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### 폐업률 기준 = 50%"
+    "### 폐업률 기준 = 상위 70%"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "id": "5951621b",
    "metadata": {},
    "outputs": [
@@ -623,12 +623,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "          안정       0.75      0.80      0.77      4111\n",
-      "          위험       0.77      0.71      0.74      3884\n",
+      "          안정       0.82      0.91      0.86      5671\n",
+      "          위험       0.70      0.53      0.60      2324\n",
       "\n",
-      "    accuracy                           0.76      7995\n",
-      "   macro avg       0.76      0.76      0.76      7995\n",
-      "weighted avg       0.76      0.76      0.76      7995\n",
+      "    accuracy                           0.80      7995\n",
+      "   macro avg       0.76      0.72      0.73      7995\n",
+      "weighted avg       0.79      0.80      0.79      7995\n",
       "\n"
      ]
     }
@@ -638,8 +638,8 @@
     "from xgboost import XGBClassifier\n",
     "from sklearn.metrics import classification_report\n",
     "\n",
-    "# 폐업률 50%을 기준으로 등급 나누기\n",
-    "df['폐업률_등급'] = pd.qcut(df['폐업_률'], q=[0, 0.5, 1.0], labels=[0, 1])\n",
+    "# 폐업률 70%을 기준으로 등급 나누기\n",
+    "df['폐업률_등급'] = pd.qcut(df['폐업_률'], q=[0, 0.7, 1.0], labels=[0, 1])\n",
     "\n",
     "X = df.drop(['폐업_률', '폐업률_등급'], axis=1) \n",
     "y_class = df['폐업률_등급']\n",
@@ -657,6 +657,84 @@
     "    colsample_bytree=0.7,\n",
     "    random_state=42\n",
     ")\n",
+    "\n",
+    "xgb_clf.fit(X_train, y_train)\n",
+    "y_pred = xgb_clf.predict(X_test)\n",
+    "\n",
+    "print(classification_report(y_test, y_pred, target_names=['안정', '위험']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "d91d1335",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-50 (_readerthread):\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\Playdata\\AppData\\Local\\anaconda3\\envs\\ml_env\\Lib\\threading.py\", line 1075, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"c:\\Users\\Playdata\\AppData\\Local\\anaconda3\\envs\\ml_env\\Lib\\site-packages\\ipykernel\\ipkernel.py\", line 772, in run_closure\n",
+      "    _threading_Thread_run(self)\n",
+      "  File \"c:\\Users\\Playdata\\AppData\\Local\\anaconda3\\envs\\ml_env\\Lib\\threading.py\", line 1012, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"c:\\Users\\Playdata\\AppData\\Local\\anaconda3\\envs\\ml_env\\Lib\\subprocess.py\", line 1599, in _readerthread\n",
+      "    buffer.append(fh.read())\n",
+      "                  ^^^^^^^^^\n",
+      "  File \"<frozen codecs>\", line 322, in decode\n",
+      "UnicodeDecodeError: 'utf-8' codec can't decode byte 0xc0 in position 4: invalid start byte\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "((56708, 133), (56708,))"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from imblearn.over_sampling import SMOTE\n",
+    "\n",
+    "smote = SMOTE(random_state=42)\n",
+    "X_resample, y_resample = smote.fit_resample(X, y_class)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "826d6492",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          안정       0.83      0.83      0.83      5671\n",
+      "          위험       0.83      0.83      0.83      5671\n",
+      "\n",
+      "    accuracy                           0.83     11342\n",
+      "   macro avg       0.83      0.83      0.83     11342\n",
+      "weighted avg       0.83      0.83      0.83     11342\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X_resample, y_resample, test_size=0.2, random_state=42, stratify=y_resample\n",
+    ")\n",
+    "\n",
     "\n",
     "xgb_clf.fit(X_train, y_train)\n",
     "y_pred = xgb_clf.predict(X_test)\n",
