feat: CatBoost 모델/데이터 저장

--- a/model/catboost/CatBoost_Classification_optuna.ipynb
+++ b/model/catboost/CatBoost_Classification_optuna.ipynb
@@ -5344,6 +5344,53 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b2e5a946",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['model_and_data.pkl']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 모델 저장\n",
+    "import joblib\n",
+    "\n",
+    "# CatBoost 모델, 데이터 저장\n",
+    "joblib.dump({\n",
+    "    'model': final_model,\n",
+    "    'X_train': X_train,\n",
+    "    'y_train': y_train,\n",
+    "    'X_test': X_test,\n",
+    "    'y_test': y_test\n",
+    "}, 'model_and_data.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "8587efbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 모델, 데이터 로드\n",
+    "data = joblib.load('model_and_data.pkl')\n",
+    "model = data['model']\n",
+    "X_train = data['X_train']\n",
+    "y_train = data['y_train']\n",
+    "X_test = data['X_test']\n",
+    "y_test = data['y_test']"
+   ]
   }
  ],
  "metadata": {
